--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "^4.0.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.4.0",
     "vite": "^5.4.1"
