--- a/package.json
+++ b/package.json
@@ -9,18 +9,13 @@
   },
   "private": true,
   "dependencies": {
-    "@hono/react-renderer": "^0.2.1",
-    "hono": "^4.6.3",
-    "honox": "^0.1.23",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "hono": "^4.6.2",
+    "honox": "^0.1.23"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
     "@hono/vite-build": "^1.0.0",
     "@hono/vite-dev-server": "^0.15.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
     "vite": "^5.2.12",
     "wrangler": "^3.57.2"
   }
